Fix background image alignments in Ch1 and Ch2 chapter title cards.

--- a/css/sass/_chapter1.sass
+++ b/css/sass/_chapter1.sass
@@ -33,6 +33,7 @@
 
     .background_image
       @include multi-background("1/park")
+      background-position: center 150%
 
   .percentage_of_workers
     p
