--- a/css/sass/_chapter2.sass
+++ b/css/sass/_chapter2.sass
@@ -3,6 +3,7 @@
   .chapter_title
     .background_image
       @include multi-background("2/fishing")
+      background-position: center -50%
 
     .contents
       max-width: 900px
